# TrapGo

./: .gitignore  CMakeLists.txt  README.md
assets/: app.qrc  floor.vs  skybox-2.fs  world-2.fs  world.vs
src/: Entity.cpp  Entity.h  Shader.cpp  Shader.h  World.cpp  World.h  WorldView.cpp  WorldView.h  main.cpp
src/samples/: BetterScene.cpp  BetterScene.h  TimeLapseSample.cpp  TimeLapseSample.h
src/samples/share/v1/: Camera.cpp  Camera.h  Role.cpp  Role.h
